修复了除了Score相关功能外的所有bug